<resources>
    <string name="app_name">TipCalculator_TR</string>

    <string name="bill_amount_label">Bill Amount</string>
    <string name="bill_amount">150</string>
    <string name="percent_label">Percent</string>
    <string name="percent">15%</string>
    <string name="tip_label">Tip</string>
    <string name="tip">$0.00</string>
    <string name="total_label">Total</string>
    <string name="total">$0.00</string>

    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="menu_help">Help</string>

    <string name="remember_title">Remember Tip Percent</string>
    <string name="remember_summary">Remember the tip percent for the most recent calculation</string>

    <string name="rounding_title">Rounding?</string>
    <string name="rounding_summary">Sets the rounding option for the calculation</string>
    <string-array name="rounding_keys">
        <item>None</item>
        <item>Tip</item>
        <item>Total</item>
    </string-array>
    <string-array name="rouding_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="rounding_default">0</string>
    <string name="default_percent_title">Default tip percent</string>
    <string name="default_percent_summary">Select the default tip percent</string>
    <string-array name="default_percent_keys">
        <item>10%</item>
        <item>15%</item>
        <item>20%</item>
    </string-array>
    <string-array name="default_percent_values">
        <item>0.1f</item>
        <item>0.15f</item>
        <item>0.2f</item>
    </string-array>
    <string name="default_percent_default">0.15f</string>

    <string name="about">This version of the Tip Calculator app calculates all tips on the post-tax total for the bill.</string>

    <string name="per_person_label">Per person</string>
    <string name="per_person">$0.00</string>
    <string name="divide">Divide</string>
    <string-array name="spinner_keys">
        <item>2 Person</item>
        <item>3 Person</item>
        <item>4 Person</item>
        <item>5 Person</item>
        <item>6 Person</item>
        <item>7 Person</item>
        <item>8 Person</item>
        <item>9 Person</item>
        <item>10 Person</item>
    </string-array>

    <string name="divide_title">Divide Total</string>
    <string name="divide_summary">Divide Total between more people</string>

    <string name="color_total">Color Total</string>
    <string name="color_black">Black</string>
    <string name="color_blue">Blue</string>
    <string name="color_red">Red</string>

    <string name="color_menu">Change color</string>
    <string name="progress">50</string>

    <string name="category_tip_percent">Tip percent</string>
    <string name="category_rounding">Rounding</string>
    <string name="category_divide">Divide</string>
</resources>