<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TipCalculatorActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.42000002">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/BillAmountLabelTextView"
                style="@style/TextView.Label"
                android:text="@string/bill_amount_label" />

            <EditText
                android:id="@+id/billAmountEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="3"
                android:ems="6"
                android:inputType="number"
                android:text="@string/bill_amount" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/percentLabelTextView"
                style="@style/TextView.Label"
                android:text="@string/percent_label" />

            <TextView
                android:id="@+id/percentTextView"
                style="@style/TextView"
                android:text="@string/percent" />

            <Button
                android:id="@+id/plus_button"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:text="+" />

            <Button
                android:id="@+id/minus_button"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:text="-" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/colorTotalTextView"
                style="@style/TextView.Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/color_total" />

            <RadioGroup
                android:id="@+id/colorTotalRadioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <RadioButton
                    android:id="@+id/blackColoRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/color_black" />

                <RadioButton
                    android:id="@+id/blueColorRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/color_blue" />

                <RadioButton
                    android:id="@+id/redColorRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/color_red" />
            </RadioGroup>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tipLabelTextView"
                style="@style/TextView.Label"
                android:text="@string/tip_label" />

            <TextView
                android:id="@+id/tipTextView"
                style="@style/TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tip" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/totalLabelTextView"
                style="@style/TextView.Label"
                android:text="@string/total_label" />

            <TextView
                android:id="@+id/totalTextView"
                style="@style/TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >


            <TextView
                android:id="@+id/divideLabelTextView"
                style="@style/TextView.Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/divide" />

            <Spinner
                android:id="@+id/divideSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_span="3"
                android:padding="10dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/perPersonLabelTextView"
                style="@style/TextView.Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/per_person_label" />

            <TextView
                    android:id="@+id/perPersonTextView"
                    style="@style/TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/per_person" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/progressTextView"
                style="@style/TextView.Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/progress" />

            <SeekBar
                android:id="@+id/progressSeekBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="3"
                android:max="100"
                tools:progress="1" />
        </TableRow>


    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>